# fastapi-blog

./: alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 34a64464ff6b_initial_migration.py
apps/: database.py
apps/api_logs/: middleware.py  models.py  route.py  schemas.py
apps/authentication/: auth_routes.py  authentication.py  route.py  schemas.py  user_routes.py  utils.py
apps/authentication/models/: models.py
apps/blog/: route.py  schemas.py
apps/blog/models/: post.py
apps/stock/: route.py
apps/stock/schema/: __init__.py  history.py  stock.py
base/: models.py  pagination.py  route.py
